[package]
name = "httper"
version = "0.1.0"
authors = ["Jesper Håkansson <jesper@jesperh.se>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/drager/httper"
documentation = "https://docs.rs/httper"
description = "HTTP(S) requests made easy"
keywords = ["http", "request", "client", "web", "hyper"]
categories = ["web-programming::http-client"]

[dependencies]
hyper = "0.12.7"
hyper-tls = "0.3.0"
serde = "1.0.70"
serde_json = "1.0.24"
futures = "0.1.23"
native-tls = "0.2.0"
failure = "0.1.1"
failure_derive = "0.1.1"
tokio = "0.1.7"
serde_derive = "1.0.70"
http = "0.1.8"

[dev-dependencies]
serde_derive = "1.0.70"
